2007-05-21  Anders Carlsson  <andersca@apple.com>

        Reviewed by Ada.

        <rdar://problem/5200816> REGRESSION: With Shiira 1.2.2 , I can't open embedded link in flash object by clicking (http:/www.adobe.com )
        
        Null check the request.
        
        * WebView/WebView.mm:
        (+[WebView _canHandleRequest:]):

2007-05-19  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Geoff.
        
        <rdar://problem/5205358> REGRESSION (r21367): All messages appear entirely blank when running Mail off of tip of tree WebKit
        
        The fix is to return nil from [WebFrame dataSource] when it has not loaded anything but the fake
        empty initial document. However, WebKit still needs the real data source internally, so I also
        added a [WebFrame _dataSource] method that skips this check, and made WebKit use it throughout.

        * Misc/WebNSAttributedStringExtras.mm:
        (fileWrapperForElement):
        * Plugins/WebBaseNetscapePluginView.mm:
        (-[WebBaseNetscapePluginView dataSource]):
        * Plugins/WebNullPluginView.mm:
        (-[WebNullPluginView viewDidMoveToWindow]):
        * Plugins/WebPluginController.mm:
        (-[WebPluginController URLPolicyCheckReferrer]):
        * WebCoreSupport/WebFrameBridge.mm:
        (-[WebFrameBridge dataSource]):
        (-[WebFrameBridge redirectDataToPlugin:]):
        * WebCoreSupport/WebFrameLoaderClient.mm:
        (WebFrameLoaderClient::makeDocumentView):
        (WebFrameLoaderClient::forceLayoutForNonHTML):
        (WebFrameLoaderClient::prepareForDataSourceReplacement):
        (WebFrameLoaderClient::canCachePage):
        * WebCoreSupport/WebViewFactory.mm:
        (-[WebViewFactory bridgeForView:]):
        * WebKit.xcodeproj/project.pbxproj:
        * WebView/WebArchiver.mm:
        (+[WebArchiver archiveFrame:]):
        (+[WebArchiver archiveMainResourceForFrame:]):
        (+[WebArchiver _archiveWithMarkupString:fromFrame:nodes:]):